--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "next-routes": "^1.4.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-ga": "^2.5.3",
     "semantic-ui-css": "^2.3.3",
     "semantic-ui-react": "^0.82.1"
   }
